renders word translations

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 		<button type="submit">Submit</button>		
 	</form>
 
+	<div class="js-results results">
+		<div class="js-termTrans">
+			<div class="js-term term inline"></div>
+			<div class="js-trans trans inline"></div>
+		</div>
+		<div class="js-nativeDef"></div>
+		<div class="js-targetDef"></div>
+		<button name="addTerm">Add</button>
+	</div>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 </body>
