fixed repeat bug

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<h1>Anki Assistant</h1>
-
 	<form>
 		<label>Seach for a new word: </label>
 		<input type="text" name="js-vidSearch">
@@ -21,10 +20,14 @@
 		</div>
 		<div class="js-nativeDef"></div>
 		<div class="js-targetDef"></div>
-		<button name="addTerm">Add</button>
+		<button class="js-addTerm" name="addTerm">Add</button>
 	</div>
+
+	<div class="js-list"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
+
+
