--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
 	</div>
 
 	<div class="js-list"></div>
+	<div class="js-textArea"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
+
+
+<!-- "<textarea rows="50" cols="50"></textarea>" -->
+
 
 
