remove func and other improvements

--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
 <body>
 	<h1>Anki Assistant</h1>
 	<form>
-		<label>Seach for a new word: </label>
+		<label>Search for a new word: </label>
 		<input type="text" name="js-vidSearch">
 		<button type="submit">Submit</button>		
 	</form>
 
-	<div class="js-results results">
-		<div class="js-termTrans">
-			<div class="js-term term inline"></div>
-			<div class="js-trans trans inline"></div>
-		</div>
-		<div class="js-nativeDef"></div>
-		<div class="js-targetDef"></div>
-		<button class="js-addTerm" name="addTerm">Add</button>
-	</div>
-
+	<div class="js-results"></div>
 	<div class="js-list"></div>
 	<div class="js-textArea"></div>
 
@@ -32,7 +23,6 @@
 </html>
 
 
-<!-- "<textarea rows="50" cols="50"></textarea>" -->
-
+<!-- "<div class='js-listItem listItem' id='" + idx + '>" + -->
 
 
