added error msgs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<form>
 		<label>Search for a new word: </label>
 		<input type="text" name="js-vidSearch">
-		<button type="submit">Submit</button>		
+		<button type="submit">Submit</button>
+		<div class="js-error"></div>		
 	</form>
 
 	<div class="js-results"></div>
