--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>AnkiAssistant</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/float-grid.css">
 	<link rel="stylesheet" href="styles/main.css">
