--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
 	<header>
-		<h1>AnkiAssistant</h1>				
+		<div class="container">
+			<h1>AnkiAssistant</h1>							
+		</div>
 	</header>
 
 	<div class="row">
