mentor feed back second iteration

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<label>Search for a new word: </label>
 							<div class="searchContainer">
 								<input type="text" name="js-vidSearch">
-								<input class="js-search" type="image" alt="search icon"   src="http://iconshow.me/media/images/ui/ios7-icons/png/256/search_1.png">	
+								<input class="js-search" type="image" alt="search icon"   src="images/searchButton.png">	
 							</div>
 							<!-- <button type="submit">Submit</button> -->
 							<div class="js-error error"></div>		
