--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AnkiAssistant</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/float-grid.css">
 	<link rel="stylesheet" href="styles/main.css">
@@ -48,9 +49,6 @@
 					<div class="js-instructions instructions"></div>
 					<div class="js-textArea"></div>				
 				</div>
-				
-				
-			</div>
 			</div>
 		</div>
 	</div>
